examples/invalid/extra_tests/allocate_struct.cgl
struct Node {
  char value;
  Node* next;
}

fn main() -> int {
  Node* n = allocate Node('a', "hi");
  Node* t = allocate Node('a', nullptr, "hi");
}
